# Phonetisaurus

./: CMakeLists.txt
cmake/: ExternalDeps.cmake
src/: util.cc
